feat: add permanent token deletion and expiration control (#222)
* feat: add permanent token deletion

Now that we have the audit_log in place, we can delete tokens to keep
the list clean. The AuthenticatorLogin middleware makes sure the login
token must exist in DB for the auth to work, so it's fine to delete
tokens not used.

- Add DELETE /admin/jwt/{id} endpoint to permanently remove tokens
- Add cli command `jwt delete <id>` with confirmation prompt
- Show token details before deletion for safety
- Update swagger documentation with new endpoint
- Add database model method for token deletion

* Fix token exp type float64 when coming from json

* Print 'expired'  when the login token has expired
