# cmd/sandbox-api/main.go
@@ -327,6 +327,7 @@ func main() {
 		r.Post("/api/v1/admin/jwt", adminHandler.IssueLoginJWTHandler)
 		r.Get("/api/v1/admin/jwt", baseHandler.GetJWTHandler)
 		r.Put("/api/v1/admin/jwt/{id}/invalidate", baseHandler.InvalidateTokenHandler)
+		r.Delete("/api/v1/admin/jwt/{id}", baseHandler.DeleteTokenHandler)
 		r.Get("/api/v1/admin/jwt/{id}/activity", baseHandler.GetTokenActivityHandler)
 
 		// ---------------------------------
